# modello

./: .gitignore  .travis.yml  README.md  modello.py  pyproject.toml  pytest  setup.cfg  setup.py  test_modello.py
.github/: main.workflow
.github/workflows/: publish.yml  test.yml
examples/: geometry.py  jobs.py  nested_geometry.py  nested_line.py  streaming.py
notebooks/: Pipfile  README.md
